Fixed All cource alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1146,7 +1146,7 @@ footer p{
 
 .main-title {
   width: 100%;
-  text-align: center;
+  text-align: left;
 }
 
 .main-title p {
